# incubator-hugegraph-ai

./: .asf.yaml  .gitattributes  .gitignore  .licenserc.yaml  .pre-commit-config.yaml  LICENSE  NOTICE  README.md  example.py  gradio_example.py  mermaid_support_issue.md  pylint.conf  pyproject.toml  uv.toml
hugegraph-llm/: .gitignore  AGENTS.md  CI_FIX_SUMMARY.md  CONFIGURATION.md  MANIFEST.in  README.md  basic-introduction.md  config.md  prompt.txt  pyproject.toml  quick_start.md  requirements.txt  run_tests.py  setup.py
hugegraph-llm/.github/workflows/: hugegraph-llm.yml
hugegraph-llm/api/src/llm/: openai.py
hugegraph-llm/api/src/text2kg/: data_to_data.py  data_to_kg.py  text_to_data.py  text_to_kg.py  unstructured_data_utils.py
hugegraph-llm/examples/: build_kg_test.py  graph_rag_test.py
hugegraph-llm/llm_api/: README.md  main.py  requirements.txt
hugegraph-llm/src/config/: config.ini
hugegraph-llm/src/hugegraph_llm/api/: admin_api.py  config_api.py  rag_api.py  stream_api.py  vector_api.py
hugegraph-llm/src/hugegraph_llm/config/: __init__.py  admin_config.py  config.ini  config.py  config_data.py  config_prompt.yaml  generate.py  hugegraph_config.py  index_config.py  llm_config.py  prompt_config.py
hugegraph-llm/src/hugegraph_llm/demo/: css.py  gremlin_generate_web_demo.py  rag_web_demo.py
hugegraph-llm/src/hugegraph_llm/document/: __init__.py  chunk_split.py
hugegraph-llm/src/hugegraph_llm/enums/: build_mode.py  id_strategy.py  property_cardinality.py  property_data_type.py
hugegraph-llm/src/hugegraph_llm/examples/: build_kg_test.py  graph_rag_test.py
hugegraph-llm/src/hugegraph_llm/flows/: __init__.py  build_example_index.py  build_schema.py  build_vector_index.py  common.py  get_graph_index_info.py  graph_extract.py  import_graph_data.py  prompt_generate.py  rag_flow_graph_only.py  rag_flow_graph_vector.py  rag_flow_raw.py  rag_flow_vector_only.py  scheduler.py  text2gremlin.py  update_vid_embeddings.py  utils.py
hugegraph-llm/src/hugegraph_llm/indices/: graph_index.py  keyword_index.py  vector_index.py
hugegraph-llm/src/hugegraph_llm/llms/: api_bot.py  base.py  ernie_bot.py  init_llm.py  openai.py  openai_llm.py  wenxinyiyan.py
hugegraph-llm/src/hugegraph_llm/middleware/: __init__.py  middleware.py  usetime_middleware.py
hugegraph-llm/src/hugegraph_llm/models/: __init__.py
hugegraph-llm/src/hugegraph_llm/nodes/: base_node.py  util.py
hugegraph-llm/src/hugegraph_llm/operators/: build_kg_operator.py  graph_rag_operator.py  graph_rag_task.py  gremlin_generate_task.py  kg_construction_task.py  operator_list.py  scheduler.py  util.py
hugegraph-llm/src/hugegraph_llm/state/: ai_state.py
hugegraph-llm/src/hugegraph_llm/utils/: anchor.py  config.py  constants.py  decorators.py  embedding_utils.py  file_utils.py  gradio_demo.py  graph_index_utils.py  hugegraph_utils.py  log.py  other_tool_utils.py  ragas_utils.py  tls.py  vector_index_utils.py
hugegraph-llm/src/operators/: build_kg_operator.py
hugegraph-llm/src/operators/build_kg/: commit_data_to_kg.py  disambiguate_data.py  parse_text_to_data.py
hugegraph-llm/src/operators/llm/: openai_llm.py
hugegraph-llm/src/tests/: conftest.py  test_utils.py
hugegraph-llm/src/tests/api/: test_rag_api.py
hugegraph-llm/src/tests/config/: test_config.py
hugegraph-llm/src/tests/document/: test_document.py  test_document_splitter.py  test_text_loader.py
hugegraph-llm/src/tests/indices/: test_faiss_vector_index.py  test_milvus_vector_index.py  test_qdrant_vector_index.py  test_vector_index.py
hugegraph-llm/src/tests/integration/: test_flows_integration.py  test_graph_rag_pipeline.py  test_kg_construction.py  test_rag_pipeline.py
hugegraph-llm/src/tests/middleware/: test_middleware.py
hugegraph-llm/src/tests/utils/: mock.py
hugegraph-ml/: README.md  pyproject.toml  requirements.txt  setup.py
hugegraph-ml/data_process/: __init__.py  diy_hugegraph2dgl.py  diy_hugegraph_init.py
hugegraph-ml/end2end/: appnp.py  cluster_gcn.py
hugegraph-ml/models/: __init__.py  appnp.py  arma.py  cluster_gcn.py  dagnn.py
hugegraph-ml/src/hugegraph_ml/data/: hugegraph2dgl.py  hugegraph_dataset.py
hugegraph-ml/src/hugegraph_ml/examples/: agnn_example.py  appnp_example.py  arma_example.py  bgnn_example.py  bgrl_example.py  care_gnn_example.py  cluster_gcn_example.py  correct_and_smooth_example.py  dagnn_example.py  deepergcn_example.py  dgi_example.py  diffpool_example.py  gatne_example.py  gin_example.py  grace_example.py  grand_example.py  jknet_example.py  pgnn_example.py  seal_example.py
hugegraph-ml/src/hugegraph_ml/models/: agnn.py  appnp.py  arma.py  bgnn.py  bgrl.py  care_gnn.py  cluster_gcn.py  correct_and_smooth.py  dagnn.py  deepergcn.py  dgi.py  diffpool.py  gatne.py  gin_global_pool.py  grace.py  grand.py  jknet.py  mlp.py  pgnn.py  seal.py
hugegraph-ml/src/hugegraph_ml/tasks/: fraud_detector_caregnn.py  graph_classify.py  hetero_sample_embed_gatne.py  link_prediction_pgnn.py  link_prediction_seal.py  node_classify.py  node_classify_with_edge.py  node_classify_with_sample.py  node_embed.py
hugegraph-ml/src/hugegraph_ml/utils/: data_import_from_dgl.py  dgl2hugegraph_utils.py  early_stopping.py
hugegraph-ml/src/tests/: conftest.py
hugegraph-ml/src/tests/test_data/: test_hugegraph2dgl.py
hugegraph-ml/src/tests/test_examples/: test_examples.py
hugegraph-ml/src/tests/test_tasks/: test_node_classify.py  test_node_embed.py
hugegraph-ml/src/tests/utils/: data_import_from_dgl.py
hugegraph-ml/utils/: clear_graph.py  delete_graph.py  post_graph.py
hugegraph-python-client/: README.md  main.py  pyproject.toml  requirements.txt  setup.py
hugegraph-python-client/example/: client_test.py  example.py  hugegraph_test.py  test.py
hugegraph-python-client/src/pyhugegraph/: client.py
hugegraph-python-client/src/pyhugegraph/api/: auth.py  common.py  graph.py  graphs.py  gremlin.py  metric.py  rank.py  (+7 more)
hugegraph-python-client/src/tests/: client_utils.py
vermeer-python-client/: README.md  pyproject.toml  requirements.txt  setup.py
vermeer-python-client/src/pyvermeer/: __init__.py
(+357 files in other folders)
