# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[project]
name = "hugegraph-ai"
version = "1.5.0" # Assuming a common version, adjust if necessary
description = "A repository for AI-related projects for Apache HugeGraph."
authors = [
    { name = "Apache HugeGraph Contributors", email = "dev@hugegraph.apache.org" },
]
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10" # Adjusted to the highest requirement among submodules (hugegraph-llm)
maintainers = [
    { name = "Apache HugeGraph Contributors", email = "dev@hugegraph.apache.org" },
]

dependencies = [
    # Common dependencies can be listed here if any,
    # but it's generally better to keep them within extras for clarity
]

[project.optional-dependencies]
llm = [
    "hugegraph-llm",
    "openai~=1.61.0",
    "ollama~=0.4.8",
    "qianfan~=0.3.18",
    "retry~=0.9.2",
    "tiktoken~=0.7.0",
    "nltk~=3.9.1",
    "gradio~=5.20.0",
    "jieba~=0.42.1",
    # numpy is also in ml, pinning to the version required by llm (>=1.24.4)
    "numpy~=1.24.4",
    "python-docx~=1.1.2",
    "langchain-text-splitters~=0.2.2",
    "faiss-cpu~=1.8.0",
    "python-dotenv~=1.0.1",
    "pyarrow~=17.0.0",
    # pandas is also in ml, pinning to the version required by llm (<2.2.2)
    "pandas~=2.2.3",
    "openpyxl~=3.1.5",
    "pydantic-settings~=2.6.1",
    # decorator is also in python-client and vermeer
    "decorator~=5.1.1",
    # requests is also in python-client and vermeer
    "requests~=2.32.0",
    # setuptools is also in python-client and vermeer
    "setuptools~=70.0.0",
    # urllib3 is also in python-client and vermeer
    "urllib3~=2.2.2",
    # rich is also in python-client and vermeer
    "rich~=13.9.4",
    "apscheduler~=3.10.4",
    "litellm~=1.61.13",
]
ml = [
    "hugegraph-ml",
    "dgl~=2.1.0",
    "ogb~=1.3.6",
    # pandas is also in llm, ensure version compatibility. llm: <2.2.2, ml: ~2.2.3. This needs resolution.
    # For now, let's use the stricter one from llm. If ml truly needs 2.2.3, this will be an issue.
    "pandas~=2.2.3",
    "catboost~=1.2.3",
    "category_encoders~=2.6.3",
    # numpy is also in llm
    "numpy~=1.24.4",
    "torch==2.2.0",
    "tqdm~=4.66.5",
    "packaging~=24.1",
    "torchdata~=0.7.0",
    "PyYAML~=6.0.2",
    "pydantic~=2.10.6",
]
python-client = [
    "hugegraph-python-client",
    # Dependencies already listed in llm's optional-dependencies, so they will be included
    # if both llm and python-client are installed.
    # "decorator~=5.1.1",
    # "requests~=2.32.0",
    # "setuptools~=70.0.0", To handle version conflicts, change to "setuptools~=78.1.1",
    # "urllib3~=2.2.2",
    # "rich~=13.9.4",
]
vermeer = [
    "vermeer-python-client", # This will be the new name for vermeer-python-client package
    # Dependencies from vermeer's requirements.txt
    # "decorator~=5.1.1", # Already in llm
    # "requests~=2.32.0", # Already in llm
    # "setuptools~=78.1.1", # Version conflict with llm (70.0.0). Using llm's version.
    # "urllib3~=2.2.2", # Already in llm
    # "rich~=13.9.4", # Already in llm
    "python-dateutil~=2.9.0",
]
all = [
    "hugegraph-ai[llm,ml,python-client,vermeer]",
]


[project.urls]
homepage = "https://hugegraph.apache.org/"
repository = "https://github.com/apache/incubator-hugegraph-ai"
documentation = "https://hugegraph.apache.org/docs/quickstart/hugegraph-ai/" # General AI docs
"Bug Tracker" = "https://github.com/apache/incubator-hugegraph-ai/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# If you want to modify the network configuration file of the project, then you can modify this part
[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple" # Centralized index
default = true

[tool.hatch.metadata] # Keep this if hatch is still used by submodules, otherwise remove
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = [
    "hugegraph-llm/src",
    "hugegraph-ml/src",
    "hugegraph-python-client/src", 
    "vermeer-python-client/src"
]

[tool.hatch.build.targets.sdist]
include = ["*/src", "README.md", "LICENSE", "NOTICE"]

[tool.uv.sources]
hugegraph-llm = { workspace = true }
hugegraph-ml = { workspace = true }
hugegraph-python-client = { workspace = true }
vermeer-python-client = { workspace = true }

[tool.uv.workspace]
members = [
    "hugegraph-llm",
    "hugegraph-ml",
    "hugegraph-python-client",
    "vermeer-python-client"
]
