# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[project]
name = "hugegraph-llm"
version = "1.5.0"
description = "A tool for the implementation and research related to large language models."
authors = [
    { name = "Apache HugeGraph Contributors", email = "dev@hugegraph.apache.org" },
]
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10,<3.12"
maintainers = [
    { name = "Apache HugeGraph Contributors", email = "dev@hugegraph.apache.org" },
]


dependencies = [
    "openai~=1.61.0",
    "ollama~=0.4.8",
    "qianfan~=0.3.18",
    "retry~=0.9.2",
    "tiktoken>=0.7.0",
    "nltk~=3.9.1",
    "gradio>5.0.0",
    "jieba>=0.42.1",
    "numpy~=1.24.4",
    "python-docx~=1.1.2",
    "langchain-text-splitters~=0.2.2",
    "faiss-cpu~=1.8.0",
    "python-dotenv>=1.0.1",
    "pyarrow~=17.0.0",
    "pandas<2.2.2",
    "openpyxl~=3.1.5",
    "pydantic-settings~=2.6.1",
    "decorator~=5.1.1",
    "requests~=2.32.0",
    "setuptools~=70.0.0",
    "urllib3~=2.2.2",
    "rich~=13.9.4",
    "apscheduler~=3.10.4",
    "litellm~=1.61.13",
    "hugegraph-python"
]
[project.urls]
homepage = "https://hugegraph.apache.org/"
repository = "https://github.com/apache/incubator-hugegraph-ai"
documentation = "https://hugegraph.apache.org/docs/quickstart/hugegraph-ai/"
"Bug Tracker" = "https://github.com/apache/incubator-hugegraph-ai/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

#If you want to modify the network configuration file of the project, then you can modify this part
[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.hatch.build.targets.wheel]
packages = ["src/hugegraph_llm"]

[tool.hatch.build.targets.sdist]
include = [
    "src/hugegraph_llm",
    "README.md",
    "LICENSE",
    "NOTICE",
    "MANIFEST.in"
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.sources]
hugegraph-python = { path = "../hugegraph-python-client/", editable = true }
