# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[project]
name = "hugegraph-llm"
version = "1.7.0"
description = "A tool for the implementation and research related to large language models."
authors = [
    { name = "Apache HugeGraph Contributors", email = "dev@hugegraph.apache.org" },
]
maintainers = [
    { name = "Apache HugeGraph Contributors", email = "dev@hugegraph.apache.org" },
]
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10,<3.12"
dependencies = [
    # Common dependencies
    "decorator",
    "requests",
    "setuptools",
    "urllib3",
    "rich",

    # Data processing dependencies
    "numpy",
    "pandas",
    "pydantic",
    "tqdm",
    "scipy",
    "python-igraph",

    # LLM specific dependencies
    "openai",
    "ollama",
    "retry",
    "tiktoken",
    "nltk",
    "gradio",
    "jieba",
    "python-docx",
    "langchain-text-splitters",
    "faiss-cpu",
    "python-dotenv",
    "pyarrow",
    "openpyxl",
    "pydantic-settings",
    "apscheduler",
    "litellm",
    "hugegraph-python-client",
    "pycgraph==3.2.2",
]

[project.optional-dependencies]
vectordb = [
    "pymilvus==2.5.9",
    "qdrant-client==1.14.2",
]

[project.urls]
homepage = "https://hugegraph.apache.org/"
repository = "https://github.com/apache/incubator-hugegraph-ai"
documentation = "https://hugegraph.apache.org/docs/quickstart/hugegraph-ai/"
bug_tracker = "https://github.com/apache/incubator-hugegraph-ai/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hugegraph_llm"]

[tool.hatch.build.targets.sdist]
include = [
    "src/hugegraph_llm",
    "README.md",
    "LICENSE",
    "NOTICE",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.sources]
hugegraph-python-client = { workspace = true }
pycgraph = { git = "https://github.com/ChunelFeng/CGraph.git", subdirectory = "python", tag = "v3.2.2", marker = "platform_machine == 'aarch64'" }

[tool.mypy]
disable_error_code = ["import-untyped"]
check_untyped_defs = true
disallow_untyped_defs = false

[tool.ruff]
line-length = 120
indent-width = 4
extend-exclude = []

# TODO: move this config in the root pyproject.toml & add more rules for it
[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
quote-style = "preserve"
indent-style = "space"
line-ending = "auto"
