# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hugegraph-ml"
version = "1.5.0"
description = "Machine learning extensions for Apache HugeGraph."
authors = [
    { name = "Apache HugeGraph Contributors", email = "dev@hugegraph.apache.org" },
]
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"

dependencies = [
    "dgl~=2.1.0",
    "ogb~=1.3.6",
    "pandas~=2.2.3",
    "catboost~=1.2.3",
    "category_encoders~=2.6.3",
    "numpy~=1.24.4",
    "torch==2.2.0",
    "tqdm~=4.66.5",
    "packaging~=24.1",
    "torchdata~=0.7.0",
    "PyYAML~=6.0.2",
    "pydantic~=2.9.2",
    "hugegraph-python-client"
]

[project.urls]
homepage = "https://hugegraph.apache.org/"
repository = "https://github.com/apache/incubator-hugegraph-ai"

# If you want to modify the network configuration file of the project, then you can modify this part
[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.hatch.build.targets.wheel]
packages = ["src/hugegraph_ml"]

[tool.hatch.build.targets.sdist]
include = [
    "src/hugegraph_ml",
    "README.md",
    "LICENSE",
    "NOTICE",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.sources]
hugegraph-python-client = { path = "../hugegraph-python-client/", editable = true }
