# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[project]
name = "hugegraph-python-client"
version = "1.5.0"
description = "A Python SDK for Apache HugeGraph Database."
authors = [
    { name = "Apache HugeGraph Contributors", email = "dev@hugegraph.apache.org" },
]
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"

dependencies = [
    # Core dependencies moved to root's common-deps
]

[project.urls]
"Homepage" = "https://github.com/apache/incubator-hugegraph-ai"
"Repository" = "https://github.com/apache/incubator-hugegraph-ai"
"Bug Tracker" = "https://github.com/apache/incubator-hugegraph-ai/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyhugegraph"]

[tool.hatch.build.targets.sdist]
include = [
    "src/pyhugegraph",
    "README.md",
    "LICENSE",
    "NOTICE",
]

[tool.hatch.metadata]
allow-direct-references = true
