# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[project]
name = "vermeer-python-client" # Standardized name
version = "1.5.0" # Unified with root version
description = "Python client for Vermeer" # Placeholder, update if a better one is available
authors = [
    { name = "Apache HugeGraph Contributors", email = "dev@hugegraph.apache.org" }, # Assuming same authors
]
readme = "README.md"
license = "Apache-2.0" # Assuming Apache-2.0, consistent with others
requires-python = ">=3.9" # From setup.py
maintainers = [
    { name = "Apache HugeGraph Contributors", email = "dev@hugegraph.apache.org" },
]

dependencies = [
    # Vermeer specific dependencies
    "python-dateutil~=2.9.0",
    # Following dependencies moved to root:
    # decorator, requests, setuptools, urllib3, rich - in common-deps
]

[project.urls]
homepage = "https://hugegraph.apache.org/" # Placeholder, update if specific URL exists
repository = "https://github.com/apache/incubator-hugegraph-ai" # Placeholder

[build-system]
requires = ["hatchling"] # Using hatchling like other submodules for consistency
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyvermeer"] # Based on the setup.py's find_packages and package_dir

[tool.hatch.build.targets.sdist]
include = [
    "src/pyvermeer",
    "README.md",
]

[tool.hatch.metadata]
allow-direct-references = true
