# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[project]
name = "vermeer-python-client"
version = "1.5.0" # Independently managed version for the vermeer-python-client package
description = "A Python client library for interacting with Vermeer, a tool for managing and analyzing large-scale graph data."
authors = [
    { name = "Apache HugeGraph Contributors", email = "dev@hugegraph.apache.org" }
]
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"

dependencies = [
    # Common dependencies
    "decorator",
    "requests",
    "setuptools",
    "urllib3",
    "rich",
    
    # Vermeer specific dependencies
    "python-dateutil",
]

[project.urls]
homepage = "https://hugegraph.apache.org/"
repository = "https://github.com/apache/incubator-hugegraph-ai"

[build-system]
requires = ["hatchling"] # Using hatchling like other submodules for consistency
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyvermeer"] # Based on the setup.py's find_packages and package_dir

[tool.hatch.build.targets.sdist]
include = [
    "src/pyvermeer",
    "README.md",
]

[tool.hatch.metadata]
allow-direct-references = true
